# orbmancer

./: .gdbinit  Cargo.toml  LICENSE  README.md  TODO.org  clippy.toml  rust-analyzer.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: agb_manual.md
assets/: background.aseprite  ball.aseprite  ball_cursor.aseprite  ball_direction.aseprite  bucket.aseprite  drop_background.aseprite  drop_ball_cursor.aseprite  drop_screen.aseprite  game_over_screen.aseprite  jauge.aseprite  jauge_background.aseprite  jauge_foreground.aseprite  jauge_foreground_left.aseprite  jauge_foreground_right.aseprite  jauge_mask.aseprite  numbers.aseprite  palette.aseprite  peg.aseprite  point_background.aseprite  points.aseprite  saved.aseprite  title_screen.aseprite  white_background.aseprite
docs/: BENCHMARKING.md  OPTIMIZATION_PLAN.md
src/: ball.rs  bench.rs  error.rs  level.rs  lib.rs  main.rs  peg.rs  position.rs  reset.rs  save.rs  text.rs  types.rs
src/physics/: grid.rs  mod.rs
src/scenes/: mod.rs  text_box.rs
src/scenes/drop/: mod.rs
src/scenes/ecs/: ball.rs  mod.rs  peg.rs  physics.rs  render.rs
src/scenes/game/: background.rs  ball.rs  bucket.rs  config.rs  counter.rs  direction_viewer.rs  effect.rs  game_state.rs  input.rs  inventory.rs  jauge.rs  launcher.rs  mod.rs  peg.rs  peg_generator.rs  peg_physics.rs  physics.rs  physics_handler.rs  points_pres.rs  saved_pres.rs  score.rs  shake.rs  state.rs  test.rs  text_box.rs
src/test_scenes/: mod.rs  physics_bench.rs  physics_test.rs
tools/: Cargo.toml
tools/.cargo/: config.toml
tools/src/: main.rs
(+10 files in other folders)
