[package]
name = "peg-gle"
version = "0.1.0"
authors = [""]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.22.2"
heapless = "0.8"
const-random = "0.1"
bevy = { version = "0.16.1", default-features = false }

[features]
default = []
benchmark = []

[profile.dev]
opt-level = 3
debug = true

[[bin]]
name = "peg-gle"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
debug = false

